@@ -23,19 +23,23 @@ public class UserDetailsServiceImpl implements UserDetailsService {
     @Override // Thêm @Override
     @Transactional // Đảm bảo hoạt động trong 1 transaction
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        System.out.println("Attempting to load user: " + username); // Log 1
-
-        // Sử dụng UserEntity
+        System.out.println("Attempting to load user: " + username); 
+        
+        // 1. Tìm User
         UserEntity userEntity = userRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User Not Found with username: " + username));
 
-        System.out.println("User found: " + userEntity.getUsername()); // Log 2
-        System.out.println("Password hash from DB: " + userEntity.getPasswordHash()); // Log 3
+        System.out.println("User found: " + userEntity.getUsername());
+        System.out.println("Password hash from DB: " + userEntity.getPasswordHash());
 
-        // Tạo danh sách quyền hạn
-        List<GrantedAuthority> authorities = Arrays.asList(new SimpleGrantedAuthority(userEntity.getRole()));
+        // 2. KHẮC PHỤC LỖI QUAN TRỌNG NHẤT (403 Forbidden)
+        // Spring Security yêu cầu vai trò phải có tiền tố "ROLE_"
+        String roleName = "ROLE_" + userEntity.getRole().toUpperCase(); 
+        
+        // 3. Tạo danh sách quyền hạn
+        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(roleName));
 
-        // Trả về đối tượng UserDetails của Spring Security
+        // 4. Trả về đối tượng UserDetails của Spring Security
         return new org.springframework.security.core.userdetails.User(
                 userEntity.getUsername(),
                 userEntity.getPasswordHash(), // Lấy hash từ Entity
